[gd_scene load_steps=4 format=3 uid="uid://c8iwn8ej2v35j"]

[ext_resource type="PackedScene" uid="uid://d07e6f1o6yrrx" path="res://battles/GUI/lootItem.tscn" id="1_0dcam"]
[ext_resource type="Script" path="res://battles/GUI/victoryPanel.gd" id="1_1ctwe"]
[ext_resource type="Texture2D" uid="uid://br7gin3hdwo7t" path="res://assets/gem_13.png" id="1_3mdeq"]

[node name="VictoryPanel" type="Panel"]
offset_left = 1330.0
offset_top = 440.0
offset_right = 2168.0
offset_bottom = 640.0
script = ExtResource("1_1ctwe")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 1.0
offset_right = 324.0
offset_bottom = 81.0
theme_override_font_sizes/font_size = 32
text = "Victory!"

[node name="labelXP2" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 78.0
offset_right = 210.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 14
text = "Experience"
vertical_alignment = 1

[node name="SubTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 45.0
offset_right = 210.0
offset_bottom = 71.0
text = "Group gained:"

[node name="amountXP" type="Label" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 79.0
offset_right = 268.0
offset_bottom = 105.0
theme_override_font_sizes/font_size = 14
text = "16"
horizontal_alignment = 2
vertical_alignment = 1

[node name="amountXP" type="Label" parent="amountXP"]
layout_mode = 0
offset_left = 56.0
offset_right = 76.0
offset_bottom = 26.0
theme_override_font_sizes/font_size = 14
text = "XP"
horizontal_alignment = 2
vertical_alignment = 1

[node name="labelTotalXP" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 120.0
offset_right = 62.0
offset_bottom = 146.0
theme_override_font_sizes/font_size = 10
text = "Total"

[node name="amountTotalXP" type="Label" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 120.0
offset_right = 98.0
offset_bottom = 146.0
theme_override_font_sizes/font_size = 10
text = "20"
horizontal_alignment = 2

[node name="XP add" type="Label" parent="amountTotalXP"]
layout_mode = 0
offset_left = 48.0
offset_right = 61.0
offset_bottom = 26.0
theme_override_font_sizes/font_size = 10
text = "XP"
horizontal_alignment = 2

[node name="labelToNextXP" type="Label" parent="."]
layout_mode = 0
offset_left = 168.0
offset_top = 120.0
offset_right = 206.0
offset_bottom = 146.0
theme_override_font_sizes/font_size = 10
text = "To next"

[node name="amountToNextXP" type="Label" parent="."]
layout_mode = 0
offset_left = 218.0
offset_top = 120.0
offset_right = 270.0
offset_bottom = 146.0
theme_override_font_sizes/font_size = 10
text = "20"
horizontal_alignment = 2

[node name="XP add" type="Label" parent="amountToNextXP"]
layout_mode = 0
offset_left = 55.0
offset_right = 68.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 10
text = "XP"
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 160.0
offset_right = 286.0
offset_bottom = 175.0
value = 20.0
show_percentage = false

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 40.0
offset_right = 440.0
offset_bottom = 63.0

[node name="subtitle" type="Label" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 47.0
offset_right = 546.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 14
text = "Loot"
vertical_alignment = 1

[node name="LootContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 352.0
offset_top = 84.0
offset_right = 542.0
offset_bottom = 156.0

[node name="lootItem" parent="LootContainer" instance=ExtResource("1_0dcam")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="LootContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="ItemSprite2" type="TextureRect" parent="LootContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("1_3mdeq")

[node name="itemLabel2" type="Label" parent="LootContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 10
text = "Item"
vertical_alignment = 1

[node name="labelCurrency" type="Label" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 48.0
offset_right = 678.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 14
text = "Currency"
vertical_alignment = 1

[node name="amountCurrency" type="Label" parent="."]
layout_mode = 0
offset_left = 760.0
offset_top = 48.0
offset_right = 812.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 14
text = "16 C"
horizontal_alignment = 2
vertical_alignment = 1
